--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "handler_events",
-  "version": "1.0.0",
-  "description": "Manejador avanzado para bots de la organización Dark-Actions",
-  "main": "index.ts",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jeremiasbots/handler_events"
-  },
-  "scripts": {
-    "start": "bun ."
-  },
-  "keywords": [],
-  "author": {
-    "name": "jeremiasbots",
-    "email": "devepservices@gmail.com",
-    "url": "https://jeremiasbots.github.io/"
-  },
-  "license": "Apache-2.0",
-  "dependencies": {
-    "discord.js": "14.14.1",
-    "mongoose": "8.1.0",
-    "ms": "2.1.3"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4"
-  }
+	"name": "handler_events",
+	"version": "1.0.0",
+	"description": "Manejador avanzado para bots de la organización Dark-Actions",
+	"main": "src/index.ts",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/jeremiasbots/handler_events"
+	},
+	"scripts": {
+		"start": "tsx --tsconfig ./tsconfig.json -r dotenv/config .",
+		"lint": "biome check --write ."
+	},
+	"keywords": [],
+	"author": {
+		"name": "jeremiasbots",
+		"email": "devepservices@gmail.com",
+		"url": "https://jeremiasbots.github.io/"
+	},
+	"license": "Apache-2.0",
+	"dependencies": {
+		"discord.js": "14.21.0",
+		"dotenv": "17.0.1",
+		"mongoose": "8.16.1",
+		"ms": "2.1.3"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"tsx": "4.20.3"
+	}
 }
